--- a/package.json
+++ b/package.json
@@ -10,6 +10,10 @@
     "module"
   ],
   "main": "index.js",
+  "scripts": {
+    "lint": "eslint --ext .js,.vue --ignore-path .gitignore .",
+    "precommit": "npm run lint"
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/wagerfield/nuxt-base.git"
