--- a/package.json
+++ b/package.json
@@ -21,6 +21,9 @@
   "bugs": {
     "url": "https://github.com/wagerfield/nuxt-base/issues"
   },
+  "dependencies": {
+    "normalize.css": "^7.0.0"
+  },
   "devDependencies": {
     "eslint": "^4.10.0",
     "eslint-config-supermind": "^0.47.0",
