--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "url": "https://github.com/wagerfield/nuxt-base/issues"
   },
   "dependencies": {
-    "normalize.css": "^7.0.0"
+    "normalize.css": "^7.0.0",
+    "vue-svg-loader": "^0.3.0"
   },
   "devDependencies": {
     "eslint": "^4.10.0",
